--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     style: "mapbox://styles/mapbox/light-v9"
   }
 
-
   // Setup function runs once
   function setup(){
 
@@ -43,7 +42,7 @@
 
   // Main draw function runs 60 fps
   function draw(){
-
+    clear();
     ellipse(mouseX, mouseY, 50, 50);
   }
 
